for the complete list of changes, including those internal to the driver and
its test suite.


.. _release-notes-2.19:

2.19
====

This release of the Ruby driver supports MongoDB version 7.0. The Ruby driver
now supports Ruby 3.2. Ruby 2.5 and 2.6 are now deprecated.

This release includes the following new features:

- Added support for automatic AWS credentials retrieval and authentication
  with temporary credentials when AWS KMS is used for client side encryption.
- Added support for automatic GCP credentials retrieval when Google Cloud Key
  Management is used for client side encryption.
- Added support the Azure VM-assigned Managed Identity for Automatic KMS Credentials
  when Azure Key Vault is used for client side encryption.
- `Queryable Encryption <https://www.mongodb.com/docs/upcoming/core/queryable-encryption/queryable-encryption/>`_ support is extended.
- Added support for Queryable Encryption Range Indexes.
- A `crypt_shared <https://www.mongodb.com/docs/manual/core/queryable-encryption/reference/shared-library/#download-the-automatic-encryption-shared-library>`_ 
  library can be now used instead of ``mongocryptd``.
- Added support for AWS IAM Roles for service accounts, EKS in particular.
- AWS Credentials are now cached when possible.

.. _release-notes-2.18:

2.18
====

This release of the Ruby driver supports MongoDB version 5.2 and 6.0.

This release includes the following new features:

- Added support for `queryable encryption <https://www.mongodb.com/docs/upcoming/core/queryable-encryption/queryable-encryption/>`_.
- Added support for Azure Key Vault, Google Cloud Key Management, and any
  KMIP compliant Key Management System to be used as master key storage for
  client side encryption.
- It is now possible to provide the :ref:`path to a schema map file <schema-map-path>`
  instead of the entire schema map as an object.
- The driver now implements the :ref:`feature flag <feature-flags>` mechanism